[project]
name = "flautim_api"
version = "0.0.1"
authors = [
  { name="FutureLab", email="author@example.com" },
]
description = "Flautim API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FutureLab-DCC/flautim_api"
Issues = "https://github.com/FutureLab-DCC/flautim_api/issues"