[project]
name = "flautim2"
version = "0.0.1"
authors = [
  { name="FutureLab", email="author@example.com" },
]
description = "Flautim API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FutureLab-DCC/flautim2"
Issues = "https://github.com/FutureLab-DCC/flautim2/issues"